adição do updateMembersNumUseCase do Room
